--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 # Auto detect text files and perform LF normalization
 * text=auto
 # normalyzed image and video input and output
+# added parsing with pafy`s youtube-dl (yt update killed fork, wait 4 pafy`s update)
